--- a/DuAn1/src/main/java/com/boxcf/ui/NhanVienView.form
+++ b/DuAn1/src/main/java/com/boxcf/ui/NhanVienView.form
@@ -79,7 +79,8 @@
                   <Component id="btnAdd" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="416" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
