--- a/DuAn1/src/main/java/com/boxcf/ui/OrderView.form
+++ b/DuAn1/src/main/java/com/boxcf/ui/OrderView.form
@@ -44,6 +44,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Component id="panelButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Component id="jPanel3" pref="715" max="32767" attributes="0"/>
           </Group>
           <Component id="jPanel1" alignment="0" pref="815" max="32767" attributes="0"/>
