dang lam dat truoc box

--- a/DuAn1/src/main/java/com/boxcf/components/material/BoxItem.form
+++ b/DuAn1/src/main/java/com/boxcf/components/material/BoxItem.form
@@ -94,6 +94,9 @@
           <Font name="Segoe UI Semibold" size="13" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDatTruocActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="80" y="160" width="80" height="30"/>
