--- a/DuAn1/src/main/java/com/boxcf/ui/ThongTinSP.form
+++ b/DuAn1/src/main/java/com/boxcf/ui/ThongTinSP.form
@@ -8,6 +8,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="undecorated" type="boolean" value="true"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[920, 739]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -28,12 +31,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="gradientPanel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="gradientPanel1" alignment="0" pref="944" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="gradientPanel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="gradientPanel1" alignment="0" pref="739" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -46,24 +49,24 @@
         <Property name="color2" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[0, 0]"/>
+        </Property>
       </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
-                  <Component id="pnlNhanVien" pref="901" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="pnlNhanVien" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <Component id="pnlNhanVien" pref="738" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-              </Group>
+              <Component id="pnlNhanVien" alignment="0" pref="739" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -78,6 +81,12 @@
             </Property>
             <Property name="color2" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="fa" red="f5" type="rgb"/>
+            </Property>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[942, 738]"/>
+            </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[942, 738]"/>
             </Property>
           </Properties>
 
@@ -192,7 +201,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTextArea" name="jTextArea1">
+                <Component class="javax.swing.JTextArea" name="txtMoTa">
                   <Properties>
                     <Property name="columns" type="int" value="20"/>
                     <Property name="rows" type="int" value="2"/>
@@ -228,17 +237,17 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                          <Component id="buttonRound1" min="-2" pref="96" max="-2" attributes="0"/>
+                          <Component id="btnThemSP" min="-2" pref="96" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="buttonRound2" min="-2" pref="96" max="-2" attributes="0"/>
+                          <Component id="btnCapNhatSP" min="-2" pref="96" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="buttonRound3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="btnFirst" min="-2" pref="44" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="buttonRound4" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="btnPre" min="-2" pref="44" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="buttonRound5" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="btnNext" min="-2" pref="44" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="buttonRound6" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="btnLast" min="-2" pref="44" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -248,12 +257,12 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="buttonRound1" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="buttonRound2" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="buttonRound3" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="buttonRound4" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="buttonRound5" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="buttonRound6" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnThemSP" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnCapNhatSP" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnFirst" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnPre" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnNext" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnLast" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -261,7 +270,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="com.boxcf.components.ButtonRound" name="buttonRound1">
+                <Component class="com.boxcf.components.ButtonRound" name="btnThemSP">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ab" green="ac" red="2" type="rgb"/>
@@ -275,10 +284,10 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRound1ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemSPActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="com.boxcf.components.ButtonRound" name="buttonRound2">
+                <Component class="com.boxcf.components.ButtonRound" name="btnCapNhatSP">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ab" green="ac" red="2" type="rgb"/>
@@ -292,10 +301,10 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRound2ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCapNhatSPActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="com.boxcf.components.ButtonRound" name="buttonRound3">
+                <Component class="com.boxcf.components.ButtonRound" name="btnFirst">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ab" green="ac" red="2" type="rgb"/>
@@ -309,10 +318,10 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRound3ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFirstActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="com.boxcf.components.ButtonRound" name="buttonRound4">
+                <Component class="com.boxcf.components.ButtonRound" name="btnPre">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ab" green="ac" red="2" type="rgb"/>
@@ -326,10 +335,10 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRound4ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPreActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="com.boxcf.components.ButtonRound" name="buttonRound5">
+                <Component class="com.boxcf.components.ButtonRound" name="btnNext">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ab" green="ac" red="2" type="rgb"/>
@@ -343,10 +352,10 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRound5ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNextActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="com.boxcf.components.ButtonRound" name="buttonRound6">
+                <Component class="com.boxcf.components.ButtonRound" name="btnLast">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ab" green="ac" red="2" type="rgb"/>
@@ -360,12 +369,12 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRound6ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLastActionPerformed"/>
                   </Events>
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="com.boxcf.components.TextField" name="textField1">
+            <Component class="com.boxcf.components.TextField" name="txtMaSP">
               <Properties>
                 <Property name="labelText" type="java.lang.String" value=""/>
                 <Property name="opaque" type="boolean" value="false"/>
@@ -376,7 +385,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="com.boxcf.components.TextField" name="textField3">
+            <Component class="com.boxcf.components.TextField" name="txtTenSP">
               <Properties>
                 <Property name="labelText" type="java.lang.String" value=""/>
                 <Property name="opaque" type="boolean" value="false"/>
@@ -387,14 +396,14 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="com.boxcf.components.Combobox" name="combobox1">
+            <Component class="com.boxcf.components.Combobox" name="cboLoaiSP">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="60" y="130" width="230" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="com.boxcf.components.TextField" name="textField4">
+            <Component class="com.boxcf.components.TextField" name="txtGia">
               <Properties>
                 <Property name="labelText" type="java.lang.String" value=""/>
                 <Property name="opaque" type="boolean" value="false"/>
@@ -417,11 +426,11 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="810" y="20" width="50" height="50"/>
+                  <AbsoluteConstraints x="850" y="20" width="50" height="50"/>
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel2">
+            <Component class="javax.swing.JLabel" name="lblHinh">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
