--- a/DuAn1/src/main/java/com/boxcf/ui/ThongTinBox.form
+++ b/DuAn1/src/main/java/com/boxcf/ui/ThongTinBox.form
@@ -41,10 +41,10 @@
     <Container class="com.boxcf.components.GradientPanel" name="gradientPanel1">
       <Properties>
         <Property name="color1" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+          <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
         <Property name="color2" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+          <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
       </Properties>
 
